executor/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: executor
  namespace: executor
  labels:
    app: executor
spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: 5000
      name: http
  selector:
    app: executor
